--- a/ru2ya/android/app/src/main/AndroidManifest.xml
+++ b/ru2ya/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.INTERNET"/>
-
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
 
 
@@ -16,6 +17,11 @@
         android:label="ru2ya"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+        <service android:name="com.transistorsoft.locationmanager.BackgroundGeolocationService" android:foregroundServiceType="location" android:enabled="true" android:exported="false"/>
+
+
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
