--- a/ru2ya/pubspec.yaml
+++ b/ru2ya/pubspec.yaml
@@ -38,13 +38,9 @@ dependencies:
   bloc: ^9.0.0
   flutter_bloc: ^9.1.0
   permission_handler: ^11.1.0
-
-
-
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  qr_flutter: ^4.1.0
+  network_info_plus: ^6.1.4
+  device_info_plus: ^11.4.0
   cupertino_icons: ^1.0.8
   firebase_core: ^3.13.0
   cloud_firestore: ^5.6.6
