--- a/ru2ya/android/app/src/main/AndroidManifest.xml
+++ b/ru2ya/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,11 @@
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_SCAN"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE"/>
 
 
 
@@ -19,9 +24,8 @@
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
+
         <service android:name="com.transistorsoft.locationmanager.BackgroundGeolocationService" android:foregroundServiceType="location" android:enabled="true" android:exported="false"/>
-
-
 
         <activity
             android:name=".MainActivity"
