--- a/ru2ya/pubspec.yaml
+++ b/ru2ya/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.13.0
   cloud_firestore: ^5.6.6
+  flutter_blue_plus: ^1.35.4
 
 dev_dependencies:
   flutter_test:
