--- a/ru2ya/pubspec.yaml
+++ b/ru2ya/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_core: ^3.13.0
   cloud_firestore: ^5.6.6
   flutter_blue_plus: ^1.35.4
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
