--- a/ru2ya/android/app/src/main/AndroidManifest.xml
+++ b/ru2ya/android/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
 
 
     <application
-        android:label="ru2ya"
+        android:label="Ru2ya"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
