--- a/ru2ya/android/app/src/main/AndroidManifest.xml
+++ b/ru2ya/android/app/src/main/AndroidManifest.xml
@@ -27,6 +27,15 @@
 
         <service android:name="com.transistorsoft.locationmanager.BackgroundGeolocationService" android:foregroundServiceType="location" android:enabled="true" android:exported="false"/>
 
+        <service
+            android:name=".java.MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
