--- a/ru2ya/pubspec.yaml
+++ b/ru2ya/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   cloud_firestore: ^5.6.6
   flutter_blue_plus: ^1.35.4
   http: ^1.3.0
+  firebase_messaging: ^15.2.6
+  flutter_local_notifications: ^19.2.1
 
 dev_dependencies:
   flutter_test:
