--- a/ru2ya/pubspec.yaml
+++ b/ru2ya/pubspec.yaml
@@ -2,7 +2,7 @@ name: ru2ya
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -48,6 +48,7 @@ dependencies:
   http: ^1.3.0
   firebase_messaging: ^15.2.6
   flutter_local_notifications: ^19.2.1
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
@@ -58,14 +59,13 @@ dev_dependencies:
 flutter_icons:
   android: true
   ios: true
-  image_path: 'assets/glasses.png'
+  image_path: "assets/glasses.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -85,7 +85,6 @@ flutter:
     - assets/qrr.png
     - assets/bluetooth.png
     - assets/logo.jpeg
-
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
