--- a/ru2ya/pubspec.yaml
+++ b/ru2ya/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   firebase_messaging: ^15.2.6
   flutter_local_notifications: ^19.2.1
   uuid: ^4.5.1
+  flutter_native_splash: ^2.4.6
 
 dev_dependencies:
   flutter_test:
@@ -59,7 +60,7 @@ dev_dependencies:
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/lolololo.jpg"
+  image_path: "assets/ru2yaaf.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -84,8 +85,10 @@ flutter:
     - assets/visible.png
     - assets/qrr.png
     - assets/bluetooth.png
+    - assets/RRR.png
     - assets/logo.jpeg
     - assets/lolololo.jpg
+    - assets/try.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
